# mcdd-c-study-2048

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game.c  game.h  init.sh  main.c  main.h  part01_init.c  part01_init.h  part02_show.c  test.c  test_part01_init.c
.github/: settings.yml
